--- a/src/FG.Samples.ServiceFabricPeople/ServiceFabricPeople.Tests/ServiceFabricPeople.Tests.csproj
+++ b/src/FG.Samples.ServiceFabricPeople/ServiceFabricPeople.Tests/ServiceFabricPeople.Tests.csproj
@@ -12,10 +12,12 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
     <PackageReference Include="Microsoft.Diagnostics.EventFlow.Inputs.Etw" Version="1.1.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="2.8.232" />
     <PackageReference Include="Microsoft.ApplicationInsights.WindowsServer" Version="2.4.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\FG.ServiceFabric\src\FG.Common\FG.Common.csproj" />
